src/ingress/ingress-namespace-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namespace-default
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - backend:
          service:
            name: hello-minikube
            port:
              number: 8080
        path: /hello-minikube
        pathType: Prefix   

      - backend:
          service:
            name: hello-blue-whale
            port:
              number: 80
        path: /hello-blue-whale
        pathType: Prefix
      
      - backend:
          service:
            name: hello-minikube
            port:
              number: 8080
        path: /hello-minikube
        pathType: Prefix   

      - backend:
          service:
            name: hello-world
            port:
              number: 80
        path: /hello-world
        pathType: Prefix   
      
      - backend:
          service:
            name: it-tools
            port:
              number: 80
        path: /it-tools
        pathType: Prefix

      - backend:
          service:
            name: kuard
            port:
              number: 8080
        path: /kuard
        pathType: Prefix

      - backend:
          service:
            name: foo-service
            port:
              number: 8080
        path: /foo
        pathType: Prefix

      - backend:
          service:
            name: bar-service
            port:
              number: 8080
        path: /bar
        pathType: Prefix

      - backend:
          service:
            name: web
            port:
              number: 8080
        path: /web
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
