src/ingress/ingress-namespace-kubernetes-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namespace-kubernetes-dashboard 
  namespace: default
labels:
  app.kubernetes.io/author: thomas-rausch
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
        path: /kubernetes-dashboard 
        pathType: Prefix   

status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
