src/ingress/ingress-nginx-default-apps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/author: thomas-rausch
spec:
  ingressClassName: nginx
  rules:
  - host: enclosed.master-node
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: enclosed
            port:
              number: 8787
  - host: hello-blue-whale.master-node
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-blue-whale
            port:
              number: 80
  - host: it-tools.master-node
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-tools
            port:
              number: 80
  - host: kuard.master-node
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 8080
